# SF

./: AD+SM_interaction.py  AD_ONLY_analyse.py  AD_ONLY_interaction.py  AD_and_SM_analyse.py  AD_and_SM_interaction.py  AD_interaction.py  README.md  Return.py  SM_analyse.py  SM_interaction.py  analysis.ipynb  data_loader.py  main.py  pyproject.toml  test.ipynb  visualisation.py  visualization.py
.ipynb_checkpoints/: Return-checkpoint.py
artifacts/: high_risk_cells.csv  recommendations.csv  recommendations_all_segments_over51.csv  return_rate_lookup.csv  return_rate_lookup_clean.csv
domain/: segment.py
scripts/: main_legacy.py
services/: modeling.py  reco.py  repository.py  returns.py  rules.py
tests/: tests_run.py
viz/: __init__.py  plots.py
