[project]
name = "sf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.9.4",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sf = { workspace = true }

[dependency-groups]
dev = [
    "sf",
]
